- Added --with-cpu=arm_fpu as decoder choice for runtime switch between plain fpu code and NEON.
- Fix ARM builds to work properly on debian systems without special CFLAGS (NEON decoder, specifically).
- Make scripts/benchmark-cpu.pl check the return value instead of delivering crazy timings for crashed mpg123.

1.18.1
---
- Do not close buffer twice with mpg123 -R (delete outdated code in control_generic(), fixing bug 207.
- Do not mess around with first command line argument to extract program name, use a copy instead, fixing bug 205.
- Prevent premature exit on timing of failure to open a track in the playlist and the user wanting to skip over it (bug 206).
- Fixup of HTTP socket mess, also avoiding unnecessary FILE objects (bug 204, patch by Rajeev V. Pillai).
- Fix playlist behaviour on slow HTTP streams, jumping back ('d' key) from first track stays at first track (thanks to Rajeev again, sub-bug of bug 206).
- Fix Frankenstein check not to stumble over ID3v1 tags. My apologies. As a bonus, the position of the concerned code in the parser is now far more logical.

1.18.0
---

- libmpg123 version 39
- Big version increase for clear distinction regarding the 1.14.x regression fixes in libmpg123.
- Regression fix: Ensure decoder reinitialization on combination of seek and resync (buffer overflow bug 201, introduced in 1.14.1).
- Regression fix: Make parsing really end on reaching of junk limit (introduced in 1.14.4).
- Add check for bad bit allocation value in layer I decoder (removes audible glitch in bug 201 test file).
- Avoid wrong error message about Frankenstein streams when gapless decoding disabled.
- Be verbose about big header changes (Frankenstein streams). Note that changes in samples per frame will confuse the seeking code, but decoding can get through.
- Actually use the full routine to close tracks. Avoids socket leak when playing multiple HTTP streams from a playlist (bug 203).